Fix T48013: UV Sculpt Brush Does not appear in UV window - but does show up in uv panels (t, n)

Epic fail in recent rB2c3985 :/

To be backported to 2.77a!